--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -15,4 +15,6 @@ jobs:
       - name: Test
         uses: actions/checkout@v3
       - name: Build and Test
-        run:  xcodebuild test -project UnitTestDemo.xcodeproj -scheme UnitTestDemo -destination 'platform=iOS Simulator,name=iPhone 14 Pro,OS=16.2' build test
+        run:  xcodebuild test -project UnitTestDemo.xcodeproj -scheme UnitTestDemo -destination 'platform=iOS Simulator,name=iPhone 14 Pro,OS=16.2' -enableCodeCoverage YES build test
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
