--- a/codecov.yml
+++ b/codecov.yml
@@ -5,3 +5,9 @@ coverage:
         target: 80%
         threshold: 1%
         informational: true
+    patch:
+      default:
+        target: 80%
+        threshold: 1%
+        informational: true
+comment: false
