--- a/codecov.yml
+++ b/codecov.yml
@@ -4,10 +4,13 @@ coverage:
       default:
         target: 80%
         threshold: 1%
-        informational: true
     patch:
       default:
         target: 80%
         threshold: 1%
-        informational: true
-comment: false
+
+ignore:
+  - "*Delegate.swift"
+  - "*ViewController.swift"
+  - "*Cell.swift"
+  - "*View.swift"
